--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comfy Deploy</title>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-  </head>
 
-  <body>
-    <div id="app"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Comfy Deploy</title>
+  <link rel="icon" type="image/svg+xml" href="/icon-light.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon-light.svg" media="(prefers-color-scheme: light)" />
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" media="(prefers-color-scheme: dark)" />
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
